<resources>
    <string name="app_name">Cocktail.C</string>
    <string name="text_label_2">Map</string>
    <string name="text_label_1">Cocktail</string>
    <string name="settings">Settings</string>
    <string name="enabled_notification">Enabled notification</string>
    <string name="colorblind_mode">Colorblind mode</string>
    <string name="delete_all_data">Delete data</string>
    <string name="about_the_application">About the Application</string>
    <string name="light_mode">Enable Dark mode</string>
    <string name="color_settings">Color settings</string>
    <string name="other_settings">Other settings</string>
    <string name="nomcocktail">NomCocktail</string>
    <string name="une_image_de_cocktail">une image de cocktail</string>
    <string name="cocktails_corner">Cocktails Corner</string>
    <string name="instructions_de_pr_paration">Instructions : </string>
    <string name="contient_de_l_alcool">Contains alcohol :</string>
    <string name="categories">Categories : </string>
    <string name="type_de_verre">Type of glass : </string>
    <string name="retour">Back</string>
    <string name="ingredient">Ingredients : </string>
    <string name="about_the_app">About the App</string>
    <string name="version">Version : </string>
    <string name="appVersion">1.0.0</string>
    <string name="creatorName">Puscedo Bastien, Segalla Valentin, Graux François</string>
    <string name="creator">Creator : </string>
    <string name="cocktailscorner_inc_2023">CocktailsCorner Inc 2023</string>
    <string name="copyright">Copyright : </string>
    <string name="dateApp"> 21/03/2023</string>
    <string name="release_date">Release Date : </string>
    <string name="descApp">This app is a short university project to manipulate Kotlin</string>
    <string name="description">Description : </string>
    <string name="featuresApp">Get cocktail receipes, find Bar, have fun!</string>
    <string name="features">Features : </string>
    <string name="creditApp">GoogleMap API, Cocktail API</string>
    <string name="credit">Credit : </string>
    <string name="imageDesc">Cocktail Picture</string>
</resources>