<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Setting_Page"
    style="@style/Theme.AppBackground">

    <TextView
        android:id="@+id/settingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047"
        android:background="@drawable/title_style"
        android:textAppearance="@style/Theme.TextViewTitle"
        android:padding="10dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingText"
        android:layout_marginBottom="50dp"
        android:padding="10dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="30dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="30sp"
                    android:textAppearance="@style/Theme.TextViewSubTitle"
                    android:text="@string/color_settings">
                </TextView>
                <Switch
                    android:id="@+id/darkModeSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textColor="@color/Grey"
                    android:text="@string/light_mode"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    tools:ignore="UseSwitchCompatOrMaterialXml">
                </Switch>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:orientation="vertical"
                android:layout_marginBottom="25dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="30sp"
                    android:textAppearance="@style/Theme.TextViewSubTitle"
                    android:text="@string/other_settings">
                </TextView>
                <Switch
                    android:id="@+id/switchNotification"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/enabled_notification"
                    android:textSize="20sp"
                    android:textColor="@color/Grey"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="25dp"
                    tools:ignore="UseSwitchCompatOrMaterialXml">
                </Switch>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:textSize="20sp"
                    android:textAppearance="@style/Theme.TextViewContent"
                    android:text="@string/about_the_application"
                    android:layout_marginBottom="30dp">
                </TextView>
                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/delete_all_data"
                    android:textSize="15sp"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/button_delete">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>